--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -42,3 +42,28 @@ management:
     web:
       exposure:
         include: health,info
+
+resilience4j:
+  retry:
+    instances:
+      bankService:
+        max-attempts: 3
+        wait-duration: 2s
+        retry-exceptions:
+          - com.ecommerce.payment.exception.BankConnectionException
+          - java.net.SocketTimeoutException
+          - java.net.ConnectException
+
+  circuitbreaker:
+    instances:
+      bankService:
+        sliding-window-size: 10
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 30s
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+
+  timelimiter:
+    instances:
+      bankService:
+        timeout-duration: 10s
